--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-opencv-python
-numpy
-pandas
-streamlit
-Pillow
+opencv-python==4.5.5.64
+numpy==1.23.5
+pandas==1.5.3
+streamlit==1.25.0
+Pillow==9.3.0
